switched to figures insted of center (using [H] and float package) and added labels and refs. added figures from addendum cf-61-2-46

--- a/report/msredesign.bib
+++ b/report/msredesign.bib
@@ -3,7 +3,7 @@
   title   = {fluid dynamic studies of the molten-salt reactor experiment (msre) core},
   journal = {oak ridge national laboratory},
   year    = 1970,
-  volume  = {ORNL-TM-3229}
+  volume  = {ornl-tm-3229}
 }
 
 @article{ornl-tm-0378,
@@ -11,7 +11,7 @@
   title   = {temperatures in the msre core during steady-state power operation},
   journal = {oak ridge national laboratory},
   year    = 1962,
-  volume  = {ORNL-TM-0378}
+  volume  = {ornl-tm-0378}
 }
 
 @article{ornl-tm-4174,
@@ -19,5 +19,13 @@
   title   = {postirradiation examination of materials from the msre},
   journal = {oak ridge national laboratory},
   year    = 1972,
-  volume  = {ORNL-TM-4174}
+  volume  = {ornl-tm-4174}
+}
+
+@article{ad-cf-61-2-46,
+  author  = {s. e. beall and dr. b. briggs and j. h. westsik},
+  title   = {addendum to ornl cf-61-2-46, molten-salt reactor experiment preliminary hazards report},
+  journal = {oak ridge national laboratory},
+  year    = 1961,
+  volume  = {ad-cf-61-2-46}
 }
