--- a/report/msredesign.tex
+++ b/report/msredesign.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage[active,tightpage]{preview}
 \renewcommand{\PreviewBorder}{1in}
+\usepackage{float}
+
 
 \usepackage[english]{babel}
 \usepackage{libertine}
@@ -8,7 +10,7 @@
 \usepackage[T1]{fontenc}
 
 \usepackage{graphicx}
-\usepackage{caption}
+\usepackage[figurename=figure]{caption}
 \usepackage[autostyle]{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex}
 \addbibresource{msredesign.bib}
@@ -26,7 +28,7 @@
 \author{aslak stubsgaard}
 \date{}
 
-\usepackage{lipsum}
+
 \begin{document}
 \begin{preview}
 \maketitle
@@ -36,43 +38,71 @@ the design and dimensions of the molten salt reactor experiment is detailed in s
 care is taken to give proper references to where data comes from or how its extrapolated from the available information.
 
 \section{core design}
-the msre core design can be seen in figure 1 and figure 2, note that they differ slight, e.g. the vessel drain line and around the control rod.
-\begin{center}
-  \fbox{\includegraphics[page=5,width=0.8\textwidth,trim={2cm 6cm 3.5cm 4cm},clip]{./references/ORNL-TM-3229.pdf}}\\
-  figure 1: MSRE reactor vessel \parencite[figure 1]{ornl-tm-3229}.
-\end{center}
-\begin{center}
-  \fbox{\includegraphics[page=9,width=0.8\textwidth,trim={4cm 4cm 2.5cm 3cm},clip]{./references/ORNL-TM-0378.pdf}}\\
-  figure 2: cutaway drawing of IGRE core and core vessel \parencite[figure 1]{ornl-tm-0378}.
-\end{center}
+the msre core design can be seen in figure \ref{3229-fig1} and figure \ref{0378-fig1}, note that they differ slight, e.g. the vessel drain line and around the control rod.
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=5,width=0.8\textwidth,trim={2cm 6cm 3.5cm 4cm},clip]{./references/ORNL-TM-3229.pdf}}
+  \caption{msre reactor vessel \parencite[figure 1]{ornl-tm-3229}.}
+  \label{3229-fig1}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=9,width=0.8\textwidth,trim={4cm 4cm 2.5cm 3cm},clip]{./references/ORNL-TM-0378.pdf}}
+  \caption{cutaway drawing of IGRE core and core vessel \parencite[figure 1]{ornl-tm-0378}.}
+  \label{0378-fig1}
+\end{figure}
 
 
 \subsection{control rod and sample assembly}
-the control rod and sample assembly is further detailed in figure 3.
-\begin{center}
-  \fbox{\includegraphics[page=10,width=0.8\textwidth,trim={3cm 9.5cm 3.5cm 8cm},clip]{./references/ORNL-TM-0378.pdf}}\\
-  figure 3: msre control rod arrangements and typical fuel channels \parencite[figure 2]{ornl-tm-0378}.
-\end{center}
-
-
-\section{graphite rods}
-the graphite moderator rod dimension, given in figure 4, are missing the angle of the spike, the dimensions of the pole, and disk at the bottom.
-\begin{center}
+the control rod and sample assembly is further detailed in figure \ref{61246-fig14a}, \ref{61246-fig14b}, and \ref{61246-fig14c}.
+\begin{figure}[H]
   \centering
-  \fbox{\includegraphics[page=6,width=0.8\textwidth,trim={3.5cm 6cm 2.5cm 5cm},clip]{./references/ORNL-TM-3229.pdf}}\\
-  figure 4: typical graphite core block arrangement \parencite[figure 2]{ornl-tm-3229}.
-\end{center}
+  \fbox{\includegraphics[page=23,width=0.8\textwidth,trim={4cm 2cm 4.8cm 2cm},clip]{./references/AD-CF-61-2-46.pdf}}
+  \caption{msre control rod arrangement \parencite[figure 14a]{ad-cf-61-2-46}.}
+  \label{61246-fig14a}
+\end{figure}
+% \begin{figure}[H]
+%   \fbox{\includegraphics[page=10,width=0.8\textwidth,trim={3cm 9.5cm 3.5cm 8cm},clip]{./references/ORNL-TM-0378.pdf}}
+%   \caption{msre control rod arrangements and typical fuel channels \parencite[figure 2]{ornl-tm-0378}.}
+%   \label{0378-fig2}
+% \end{figure}
 
-the arangement of the graphite rods are detailed in figure 5
-\begin{center}
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=24,width=0.8\textwidth,trim={2.5cm 2cm 2.5cm 2.5cm},clip]{./references/AD-CF-61-2-46.pdf}}
+  \caption{vertical section-poison control rod \parencite[figure 14b]{ad-cf-61-2-46}.}
+  \label{61246-fig14b}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=25,width=0.8\textwidth,trim={2.5cm 2cm 2cm 1.5cm},clip]{./references/AD-CF-61-2-46.pdf}}
+  \caption{msre control system \parencite[figure 14c]{ad-cf-61-2-46}.}
+  \label{61246-fig14c}
+\end{figure}
+
+
+\subsection{graphite rods}
+the graphite moderator rod dimension, given in figure \ref{3229-fig2}, are missing the angle of the spike, the dimensions of the pole, and disk at the bottom.
+\begin{figure}[H]
+  \centering
+  \centering
+  \fbox{\includegraphics[page=6,width=0.8\textwidth,trim={3.5cm 6cm 2.5cm 5cm},clip]{./references/ORNL-TM-3229.pdf}}
+  \caption{typical graphite core block arrangement \parencite[figure 2]{ornl-tm-3229}.}
+  \label{3229-fig2}
+\end{figure}
+
+the arangement of the graphite rods are detailed in figure \ref{4174-p10-p11}
+\begin{figure}[H]
   \centering
   \fbox{
   \includegraphics[page=10,width=0.42\textwidth,trim={1cm 3cm 0.25cm 4cm},clip]{./references/ORNL-TM-4174.pdf}
   \hspace{-0.2cm}
   \includegraphics[page=11,width=0.36\textwidth,trim={2cm 3.1cm 3cm 4cm},clip]{./references/ORNL-TM-4174.pdf}
-  }\\
-  figure 5: reactor core block assembly plan, drawing D-BB-B-40416 \parencite[page 10-11]{ornl-tm-4174}.
-\end{center}
+  }
+  \caption{reactor core block assembly plan, drawing D-BB-B-40416 \parencite[page 10-11]{ornl-tm-4174}.}
+  \label{4174-p10-p11}
+\end{figure}
 
 
 \printbibliography
