intermediate update, with lots and lots of changes.

--- a/report/msrecore.bib
+++ b/report/msrecore.bib
@@ -5,15 +5,23 @@
 }
 
 @article{ornl-3369,
-  author  = {g. m. tolson and a. taboada},
+  author  = {r. b. briggs},
   title   = {molten-salt reactor program semiannual progress report for period ending august 31, 1962},
   journal = {oak ridge national laboratory},
   year    = 1962,
   volume  = {ornl-3369}
 }
 
+@article{ornl-3419,
+  author  = {r. b. briggs},
+  title   = {molten-salt reactor program semiannual progress report for period ending january 31, 1963},
+  journal = {oak ridge national laboratory},
+  year    = 1962,
+  volume  = {ornl-3369}
+}
+
 @article{ornl-3626,
-  author  = {g. m. tolson and a. taboada},
+  author  = {r. b. briggs},
   title   = {molten-salt reactor program semiannual progress report for period ending january 31, 1964},
   journal = {oak ridge national laboratory},
   year    = 1964,
@@ -42,6 +50,14 @@
   journal = {oak ridge national laboratory},
   year    = 1968,
   volume  = {ornl-tm-3229}
+}
+
+@article{ornl-4676,
+  author  = {m. w. rosenthal and r. b. briggs and p. n. haubenreich},
+  title   = {molten-salt reactor program semiannual progress report for period ending febuary 28, 1971},
+  journal = {oak ridge national laboratory},
+  year    = 1971,
+  volume  = {ornl-4676}
 }
 
 @article{ornl-tm-0378,
